--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ subtitle: ''
 description: HudsonWu's personal blog
 keywords:
 author: Hudson Wu
-language: zh-Hans
+# language: zh-Hans
+language: zh-CN
 timezone: 'Asia/Shanghai'
 
 # URL
