--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ keywords:
 author: Hudson Wu
 # language: zh-Hans
 language: zh-CN
-timezone: 'Asia/Shanghai'
+timezone: Asia/Chongqing
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
