--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: hudson's note
-subtitle: ''
+subtitle: Before you can run, you need to be able to walk
 description: HudsonWu's personal blog
 keywords:
 author: Hudson Wu
