--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,15 +25,15 @@ jobs:
       - name: Executing remote ssh commands - pre
         uses: appleboy/ssh-action@master
         env:
-          path: ${{ secrets.SSH_DEPLOY_PATH }}
+          NGINXPATH: ${{ secrets.SSH_DEPLOY_PATH }}
         with:
           host: ${{ secrets.SSH_DEPLOY_SERVER }}
           username: ${{ secrets.SSH_DEPLOY_USER }}
           port: ${{ secrets.SSH_DEPLOY_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd $path && docker-compose down
-            rm -rf $path/public/*
+            cd $NGINXPATH && docker-compose down
+            rm -rf $NGINXPATH/public/*
       - name: Copy contents via ssh key
         uses: appleboy/scp-action@master
         env:
@@ -47,12 +47,12 @@ jobs:
       - name: Executing remote ssh commands - post
         uses: appleboy/ssh-action@master
         env:
-          path: ${{ secrets.SSH_DEPLOY_PATH }}
+          NGINXPATH: ${{ secrets.SSH_DEPLOY_PATH }}
         with:
           host: ${{ secrets.SSH_DEPLOY_SERVER }}
           username: ${{ secrets.SSH_DEPLOY_USER }}
           port: ${{ secrets.SSH_DEPLOY_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd $path && docker-compose up -d
+            cd $NGINXPATH && docker-compose up -d
 
