--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,16 +24,14 @@ jobs:
         run: hexo g
       - name: Executing remote ssh commands - pre
         uses: appleboy/ssh-action@master
-        env:
-          NGINXPATH: ${{ secrets.SSH_DEPLOY_PATH }}
         with:
           host: ${{ secrets.SSH_DEPLOY_SERVER }}
           username: ${{ secrets.SSH_DEPLOY_USER }}
           port: ${{ secrets.SSH_DEPLOY_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd $NGINXPATH && docker-compose down
-            rm -rf $NGINXPATH/public/*
+            cd ${{ secrets.SSH_DEPLOY_PATH }} && docker-compose down
+            rm -rf ${{ secrets.SSH_DEPLOY_PATH }}/public/*
       - name: Copy contents via ssh key
         uses: appleboy/scp-action@master
         env:
@@ -46,13 +44,11 @@ jobs:
           target: ${{ secrets.SSH_DEPLOY_PATH }}
       - name: Executing remote ssh commands - post
         uses: appleboy/ssh-action@master
-        env:
-          NGINXPATH: ${{ secrets.SSH_DEPLOY_PATH }}
         with:
           host: ${{ secrets.SSH_DEPLOY_SERVER }}
           username: ${{ secrets.SSH_DEPLOY_USER }}
           port: ${{ secrets.SSH_DEPLOY_PORT }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd $NGINXPATH && docker-compose up -d
+            cd ${{ secrets.SSH_DEPLOY_PATH }} && docker-compose up -d
 
