--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           npm install -g hexo-cli
           npm install
+          npm install -S hexo-generator-json-content
+          npm install hexo-deployer-git --save
       - name: Generate static files
         run: hexo g
       - name: Executing remote ssh commands - pre
