--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ author: Hudson Wu
 language: en
 # language: zh-Hans
 # language: zh-CN
-timezone: Asia/Chongqing
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://hudsonwu.github.io
+url: https://www.gogotech.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
