--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Npm cache
         uses: actions/cache@v1
         with:
-          path: |
-            ~/.npm
-            node_modules
+          path:
+            - ~/.npm
+            - node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
