--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
           git config --global user.email "wuhaishui1234@gmail.com"
           git config --global user.name 'hudson'
           git config --global push.defalut simple
+          git status
           hexo g
       - name: Deploy to hudson.wu.github.io
         run: hexo d
